회원가입 이용약관 수정

--- a/pub_list.html
+++ b/pub_list.html
@@ -1086,19 +1086,19 @@
                     division: 'footer',
                     depth1:'개인정보처리방침',
                     path:'./portal/html/USR-4010-H-CONTN.html',
-                    date:'2022-09-26',
+                    date:'2022-10-20',
                     mdate:'2022-12-01',
-                    con:'작업중',
-                    etc:'<span class="blue">디자인요청</span> [2차디자인]'
+                    con:'완료',
+                    etc:'[2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'서비스 이용약관',
                     path:'./portal/html/USR-4110-H-CONTN.html',
-                    date:'2022-09-26',
+                    date:'2022-10-20',
                     mdate:'2022-12-01',
-                    con:'작업중',
-                    etc:'<span class="blue">디자인요청</span> [2차디자인]'
+                    con:'완료',
+                    etc:'[2차디자인]'
                 },
                 {
                     division: '',
