통계 대시보드/메인 날짜기준 추가삽입

--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -342,8 +342,10 @@
                                             <strong>6,802</strong>
                                             <span>억원</span>
                                         </div>
+                                        <span class="standard">2021.12.31 기준</span>
                                     </li>
                                 </ul>
+                                
                                 <div class="shortcuts_box">
                                     <div class="shortcuts_box_content">
                                         <div class="swiper-wrapper">
@@ -426,6 +428,7 @@
                                             <strong>69/5,312</strong>
                                             <span>개/억원</span>
                                         </div>
+                                        <span class="standard">2021.12.31 기준</span>
                                     </li>
                                 </ul>
                                 <div class="shortcuts_box">
@@ -504,6 +507,7 @@
                                             <strong>62(62%)</strong>
                                             <span>개사</span>
                                         </div>
+                                        <span class="standard">2021.12.31 기준</span>
                                     </li>
                                 </ul>
                                 <div class="shortcuts_box">
