--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -377,6 +377,7 @@
                                 </div>
                                 <button class="swiper-button-prev"></button>
                                 <button class="swiper-button-next"></button>
+                                <span class="standard">2021.12.31 기준</span>
                             </div>
                         </div>
                         <!-- //첫번째 탭 -->
@@ -411,6 +412,7 @@
                                 </div>
                                 <button class="swiper-button-prev"></button>
                                 <button class="swiper-button-next"></button>
+                                <span class="standard">2021.12.31 기준</span>
                             </div>
                         </div>
                         <!-- //두번째 탭 -->
@@ -445,6 +447,7 @@
                                 </div>
                                 <button class="swiper-button-prev"></button>
                                 <button class="swiper-button-next"></button>
+                                <span class="standard">2021.12.31 기준</span>
                             </div>
 
                         </div>
