통계-투자실적 수정(고객요청)

--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -330,6 +330,7 @@
                             <li><a href="" rel="tab_content_02">지역별</a></li>
                             <li><a href="" rel="tab_content_03">업력별</a></li>
                             <li><a href="" rel="tab_content_04">투자유형별</a></li>
+                            <li><a href="" rel="tab_content_05">전문투자자용</a></li>
                         </ul>
                     </div>
                     <div class="tab_content">
@@ -1105,6 +1106,316 @@
                             </div>
                         </div>
                         <!-- //네번째 탭 -->
+
+                        <!-- 다섯번째 탭 -->
+                        <div class="tab_content_05">
+
+                            <div class="tit_box">
+                                <h4><span></span>회수유형</h4>
+                            </div>
+
+                            <div class="investment_performance_box">
+
+                                <!-- 데이터 -->
+                                <div class="all">
+
+                                    <span class="tbl_info_etc">(단위: 억원)</span>
+                                    <div class="tbl_box scroll">
+                                        <table>
+                                            <caption>차트 정보</caption>
+                                            <colgroup>
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                            </colgroup>
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">년도</th>
+                                                    <th scope="col">2012</th>
+                                                    <th scope="col">2013</th>
+                                                    <th scope="col">2014</th>
+                                                    <th scope="col">2015</th>
+                                                    <th scope="col">2016</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row">IPO</th>
+                                                    <td>30.7%</td>
+                                                    <td>49.3%</td>
+                                                    <td>10.0%</td>
+                                                    <td>9.5%</td>
+                                                    <td>0.5%</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">매각</th>
+                                                    <td>30.7%</td>
+                                                    <td>49.3%</td>
+                                                    <td>10.0%</td>
+                                                    <td>9.5%</td>
+                                                    <td>0.5%</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">상환</th>
+                                                    <td>30.7%</td>
+                                                    <td>49.3%</td>
+                                                    <td>10.0%</td>
+                                                    <td>9.5%</td>
+                                                    <td>0.5%</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">프로젝트</th>
+                                                    <td>30.7%</td>
+                                                    <td>49.3%</td>
+                                                    <td>10.0%</td>
+                                                    <td>9.5%</td>
+                                                    <td>0.5%</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">기타</th>
+                                                    <td>30.7%</td>
+                                                    <td>49.3%</td>
+                                                    <td>10.0%</td>
+                                                    <td>9.5%</td>
+                                                    <td>0.5%</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="tit_box">
+                                <h4><span></span>전체 청산펀드</h4>
+                            </div>
+
+                            <div class="investment_performance_box">
+
+                                <!-- 데이터 -->
+                                <div class="all">
+
+                                    <span class="tbl_info_etc">(단위: 억원)</span>
+                                    <div class="tbl_box scroll">
+                                        <table>
+                                            <caption>차트 정보</caption>
+                                            <colgroup>
+                                                <col width="120px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                            </colgroup>
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">년도</th>
+                                                    <th scope="col">2012</th>
+                                                    <th scope="col">2013</th>
+                                                    <th scope="col">2014</th>
+                                                    <th scope="col">2015</th>
+                                                    <th scope="col">2016</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row">상위 25% 평균 수익률</th>
+                                                    <td>18.3%</td>
+                                                    <td>18.3%</td>
+                                                    <td>18.3%</td>
+                                                    <td>18.3%</td>
+                                                    <td>18.3%</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">중위 25% 평균 수익률</th>
+                                                    <td>5.3%</td>
+                                                    <td>5.3%</td>
+                                                    <td>5.3%</td>
+                                                    <td>5.3%</td>
+                                                    <td>5.3%</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">하위 25% 평균 수익률</th>
+                                                    <td>2.1%</td>
+                                                    <td>2.1%</td>
+                                                    <td>2.1%</td>
+                                                    <td>2.1%</td>
+                                                    <td>2.1%</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="tit_box">
+                                <h4><span></span>유형별 청산펀드(ICT, M&A, 문화, 바이오, 세컨더리, 일반)</h4>
+                            </div>
+
+                            <div class="investment_performance_box">
+
+                                <!-- 데이터 -->
+                                <div class="all">
+
+                                    <span class="tbl_info_etc">(단위: 억원)</span>
+                                    <div class="tbl_box scroll">
+                                        <table>
+                                            <caption>차트 정보</caption>
+                                            <colgroup>
+                                                <col width="120px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                                <col width="60px">
+                                            </colgroup>
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">년도</th>
+                                                    <th scope="col">2012</th>
+                                                    <th scope="col">2013</th>
+                                                    <th scope="col">2014</th>
+                                                    <th scope="col">2015</th>
+                                                    <th scope="col">2016</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row">상위 25% 평균 수익률</th>
+                                                    <td>18.3%</td>
+                                                    <td>18.3%</td>
+                                                    <td>18.3%</td>
+                                                    <td>18.3%</td>
+                                                    <td>18.3%</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">중위 25% 평균 수익률</th>
+                                                    <td>5.3%</td>
+                                                    <td>5.3%</td>
+                                                    <td>5.3%</td>
+                                                    <td>5.3%</td>
+                                                    <td>5.3%</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">하위 25% 평균 수익률</th>
+                                                    <td>2.1%</td>
+                                                    <td>2.1%</td>
+                                                    <td>2.1%</td>
+                                                    <td>2.1%</td>
+                                                    <td>2.1%</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+
+                            <div class="investment_performance_box">
+
+                                <div class="left">
+
+                                    <div class="tit_box">
+                                        <h4><span></span>분야별 운영 중인 펀드명 상위 5개</h4>
+                                    </div>
+
+                                    <div class="tbl_box scroll">
+                                        <table>
+                                            <caption>차트 정보</caption>
+                                            <colgroup>
+                                                <col width="120px">
+                                                <col width="*">
+                                            </colgroup>
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">순위</th>
+                                                    <th scope="col">펀드명</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row">1위</th>
+                                                    <td>에스브이에이팔로우온투자조합</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">2위</th>
+                                                    <td>카카오 코파일럿 제1호 펀드</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">3위</th>
+                                                    <td>케이비 뉴딜 혁신펀드</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">4위</th>
+                                                    <td>델타유니콘투자조합3호</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">5위</th>
+                                                    <td>미래에셋 세이지 투자조합 2호</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+
+                                </div>
+
+                                <div class="right">
+
+                                    <div class="tit_box">
+                                        <h4><span></span>분야별 운영 중인 VC 상위 5개</h4>
+                                    </div>
+                                    
+                                    <div class="tbl_box scroll">
+                                        <table>
+                                            <caption>차트 정보</caption>
+                                            <colgroup>
+                                                <col width="120px">
+                                                <col width="*">
+                                            </colgroup>
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">순위</th>
+                                                    <th scope="col">펀드명</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row">1위</th>
+                                                    <td>소프트뱅크벤처스</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">2위</th>
+                                                    <td>카카오벤처스</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">3위</th>
+                                                    <td>케이비인베스트먼트</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">4위</th>
+                                                    <td>델타인베스트먼트</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">5위</th>
+                                                    <td>미래에셋벤처투자</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </div>
+                        <!-- //다섯번째 탭 -->
 
                     </div>
                 </div>
