--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -297,7 +297,7 @@
                             <li><a href="">벤처투자포털</a></li>
                         </ul>
                     </li>
-                    <li class="selected">
+                    <li>
                         <a href="javascript:void(0);">통계</a>
                         <ul>
                             <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
@@ -1204,7 +1204,7 @@
                                         <table>
                                             <caption>차트 정보</caption>
                                             <colgroup>
-                                                <col width="120px">
+                                                <col width="80px">
                                                 <col width="60px">
                                                 <col width="60px">
                                                 <col width="60px">
@@ -1213,7 +1213,7 @@
                                             </colgroup>
                                             <thead>
                                                 <tr>
-                                                    <th scope="col">년도</th>
+                                                    <th scope="col">구분</th>
                                                     <th scope="col">2012</th>
                                                     <th scope="col">2013</th>
                                                     <th scope="col">2014</th>
@@ -1268,7 +1268,7 @@
                                         <table>
                                             <caption>차트 정보</caption>
                                             <colgroup>
-                                                <col width="120px">
+                                                <col width="80px">
                                                 <col width="60px">
                                                 <col width="60px">
                                                 <col width="60px">
@@ -1277,7 +1277,7 @@
                                             </colgroup>
                                             <thead>
                                                 <tr>
-                                                    <th scope="col">년도</th>
+                                                    <th scope="col">구분</th>
                                                     <th scope="col">2012</th>
                                                     <th scope="col">2013</th>
                                                     <th scope="col">2014</th>
