%텍스트변경

--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -1119,7 +1119,7 @@
                                 <!-- 데이터 -->
                                 <div class="all">
 
-                                    <span class="tbl_info_etc">(단위: 억원)</span>
+                                    <span class="tbl_info_etc">(단위: %)</span>
                                     <div class="tbl_box scroll">
                                         <table>
                                             <caption>차트 정보</caption>
@@ -1199,7 +1199,7 @@
                                 <!-- 데이터 -->
                                 <div class="all">
 
-                                    <span class="tbl_info_etc">(단위: 억원)</span>
+                                    <span class="tbl_info_etc">(단위: %)</span>
                                     <div class="tbl_box scroll">
                                         <table>
                                             <caption>차트 정보</caption>
@@ -1263,7 +1263,7 @@
                                 <!-- 데이터 -->
                                 <div class="all">
 
-                                    <span class="tbl_info_etc">(단위: 억원)</span>
+                                    <span class="tbl_info_etc">(단위: %)</span>
                                     <div class="tbl_box scroll">
                                         <table>
                                             <caption>차트 정보</caption>
