고객요청 통계데이터/메인 데이터 수정

--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -377,7 +377,7 @@
                                 </div>
                                 <button class="swiper-button-prev"></button>
                                 <button class="swiper-button-next"></button>
-                                <span class="standard">2021.12.31 기준</span>
+                                <span class="standard">(2021.12.31 기준)</span>
                             </div>
                         </div>
                         <!-- //첫번째 탭 -->
@@ -389,30 +389,18 @@
                                 <div class="statistics_box">
                                     <ul class="swiper-wrapper">
                                         <li class="swiper-slide">
-                                            <span>8조 2,153억원</span>
-                                            <strong>총 조성금액</strong>
+                                            <span>20,827억원 688개사</span>
+                                            <strong>신규</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>8,548개</span>
-                                            <strong>투자기업수</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>26조 650억원</span>
-                                            <strong>투자금액</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>1.3배</span>
-                                            <strong>청산 자펀드 수익배수</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>27개중 23개</span>
-                                            <strong>유니콘 기업 배출수</strong>
+                                            <span>222,171억원 6,701개사</span>
+                                            <strong>운영</strong>
                                         </li>
                                     </ul>
                                 </div>
                                 <button class="swiper-button-prev"></button>
                                 <button class="swiper-button-next"></button>
-                                <span class="standard">2021.12.31 기준</span>
+                                <span class="standard">(2021.12.31 기준)</span>
                             </div>
                         </div>
                         <!-- //두번째 탭 -->
@@ -424,30 +412,18 @@
                                 <div class="statistics_box">
                                     <ul class="swiper-wrapper">
                                         <li class="swiper-slide">
-                                            <span>8조 2,153억원</span>
-                                            <strong>총 조성금액</strong>
+                                            <span>20,827억원 688개사</span>
+                                            <strong>신규</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>8,548개</span>
-                                            <strong>투자기업수</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>26조 650억원</span>
-                                            <strong>투자금액</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>1.3배</span>
-                                            <strong>청산 자펀드 수익배수</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>27개중 23개</span>
-                                            <strong>유니콘 기업 배출수</strong>
+                                            <span>222,171억원 6,701개사</span>
+                                            <strong>운영</strong>
                                         </li>
                                     </ul>
                                 </div>
                                 <button class="swiper-button-prev"></button>
                                 <button class="swiper-button-next"></button>
-                                <span class="standard">2021.12.31 기준</span>
+                                <span class="standard">(2021.12.31 기준)</span>
                             </div>
 
                         </div>
@@ -455,8 +431,74 @@
 
                     </div>
                 </div>
+                
+                <div class="tit_box">
+                    <h4><span></span>벤처조합</h4>
+                </div>
 
-                <!-- 유형별 투자자 현황 -->
+                <div class="investment_performance_box type_02">
+
+                    <div class="left">
+
+                        <div class="tit_box">
+                            <h5><span></span>벤처조합</h5>
+                        </div>
+
+                        <div class="content_box">
+                            <div class="disclosure_box">
+                                <div class="btn_list type_02">
+                                    <button>
+                                        <strong>창투사</strong>
+                                        <span>17923건</span>
+                                    </button>
+                                    <button>
+                                        <strong>신기술사</strong>
+                                        <span>55건</span>
+                                    </button>
+                                    <button>
+                                        <strong>LLC</strong>
+                                        <span>11건</span>
+                                    </button>
+                                    <button>
+                                        <strong>창업기획자</strong>
+                                        <span>1596건</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="right">
+
+                        <div class="tit_box">
+                            <h5><span></span>개인조합</h5>
+                        </div>
+
+                        <div class="content_box">
+                            <div class="disclosure_box">
+                                <div class="btn_list type_02">
+                                    <button>
+                                        <strong>개인투자조합</strong>
+                                        <span>2709건</span>
+                                    </button>
+                                    <button>
+                                        <strong>창업기획자</strong>
+                                        <span>2709건</span>
+                                    </button>
+                                    <button>
+                                        <strong>기타</strong>
+                                        <span>2709건</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- 유형별 투자자 현황
                 <div class="tit_box">
                     <h4><span></span>유형별 투자자 현황</h4>
                 </div>
@@ -506,11 +548,10 @@
 
                     <div class="chart">
                         <img src="../images/content/chart_01.png" alt="">
-                        <!-- <span style="display: flex; align-items: center; justify-content: center; background-color: #ccc; height: 300px;">차트영역</span> -->
                     </div>
-                </div>
+                </div> -->
 
-                <!-- 투자조합 현황 -->
+                <!-- 투자조합 현황
                 <div class="tit_box row">
                     <h4><span></span>투자조합 현황</h4>
                     <span>2022-02-09 11:00 기준</span>
@@ -538,7 +579,7 @@
                             <span>2709건</span>
                         </button>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- 신규 투자 실적 -->
                 <div class="tit_box">
